--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "lucide-react": "^0.477.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
